Fixed player in wrong position.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2195,6 +2195,9 @@
 		width: 100%;
 		z-index: 10000;
 	}
+        #welcome {
+            width: 75%;        
+        }
 
 		#header h1 {
 			font-weight: 900;
@@ -2208,7 +2211,7 @@
 		#header nav {
 			letter-spacing: 0.075em;
 			position: absolute;
-			left: 5.5em;
+			left: 5em;
 			text-transform: uppercase;
 			top: 0.75em;
 		}
@@ -2273,6 +2276,7 @@
 			letter-spacing: 0.075em;
 			position: absolute;
 			right: 2%;
+        /*  width: 25%; */
 			top: 0.75em;
 		}
             #header player h1 {
